# pycsspeechtts

./: LICENSE  README.md  pyproject.toml  setup.py
src/: setup.py
src/pycsspeechtts/: pycsspeechtts.py  test.py
