[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycsspeechtts"
version = "1.0.8"
authors = [
  { name="Jeroen ter Heerdt"},
]
description = "Python 3 interface to Microsoft Cognitive Services Text To Speech"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jeroenterheerdt/pycsspeechtts"
"Bug Tracker" = "https://github.com/jeroenterheerdt/pycsspeechtts/issues"